--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-*.o
-*.bin
-*.elf
-*.map
-*.d
-*.user
-*.lst
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
